Added comments to math.h & math.cpp Created the class Line

--- a/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj.filters
+++ b/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Math.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCVExtentions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HandReconisionTools.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Line.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
