--- a/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj
+++ b/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj
@@ -127,10 +127,13 @@
   <ItemGroup>
     <ClCompile Include="HandReconisionTools.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Math.cpp" />
     <ClCompile Include="OpenCVExtentions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HandReconisionTools.h" />
+    <ClInclude Include="Line.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="OpenCVExtentions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
