--- a/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj
+++ b/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj
@@ -126,6 +126,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="HandReconisionTools.cpp" />
+    <ClCompile Include="Line.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="OpenCVExtentions.cpp" />
