--- a/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj.filters
+++ b/EVD HandyVision v2/EVD HandyVision/EVD HandyVision.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Line.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OpenCVExtentions.h">
