--- a/EVD HandyVision v2.1/Project2/Project2.vcxproj
+++ b/EVD HandyVision v2.1/Project2/Project2.vcxproj
@@ -150,6 +150,11 @@
     </ClInclude>
     <ClInclude Include="OpenCVExtentions.h" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MyForm.resx">
+      <DependentUpon>MyForm.h</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
