--- a/EVD HandyVision v2.1/Project2/Project2.vcxproj.filters
+++ b/EVD HandyVision v2.1/Project2/Project2.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="OpenCVExtentions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VisionOperators.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -47,5 +50,13 @@
     <ClInclude Include="OpenCVExtentions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VisionOperators.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MyForm.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
