--- a/EVD HandyVision v2.1/Project2/Project2.vcxproj
+++ b/EVD HandyVision v2.1/Project2/Project2.vcxproj
@@ -138,24 +138,14 @@
     <ClCompile Include="HandReconisionTools.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="Math.cpp" />
-    <ClCompile Include="MyForm.cpp" />
-    <ClCompile Include="OpenCVExtentions.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="VisionOperators.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HandReconisionTools.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Math.h" />
-    <ClInclude Include="MyForm.h">
-      <FileType>CppForm</FileType>
-    </ClInclude>
-    <ClInclude Include="OpenCVExtentions.h" />
     <ClInclude Include="VisionOperators.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MyForm.resx">
-      <DependentUpon>MyForm.h</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
